Fix properties configuration

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,31 +1,52 @@
+# ==========================================
+# CONFIGURACIÓN DEL SERVIDOR
+# ==========================================
 spring.application.name=gestionvacantes
 server.port=${PORT:8080}
 server.address=0.0.0.0
 
-spring.datasource.url=${MYSQL_URL}
+# ==========================================
+# CONFIGURACIÓN DE BASE DE DATOS (RAILWAY)
+# ==========================================
+# Construimos la URL usando las variables EXACTAS de Railway
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# Driver y Dialecto
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+# Comportamiento de Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
-spring.thymeleaf.cache=true
+# ==========================================
+# CONFIGURACIÓN DE THYMELEAF
+# ==========================================
+spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+# ==========================================
+# SUBIDA DE ARCHIVOS
+# ==========================================
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.enabled=true
-
 app.upload.dir=uploads/cv
 
+# ==========================================
+# LOGS Y SEGURIDAD
+# ==========================================
 logging.level.com.gestionvacantes=INFO
 logging.level.org.springframework.security=WARN
 
-# SendGrid Configuration para produccion
+# ==========================================
+# EMAIL (SENDGRID)
+# ==========================================
 sendgrid.api.key=${SENDGRID_API_KEY}
-app.mail.from=${APP_MAIL_FROM}
+# Si no tienes definida la variable APP_MAIL_FROM en Railway, usa tu correo directo aquí abajo:
+app.mail.from=${APP_MAIL_FROM:allex124mtz@gmail.com}
 app.mail.from-name=Sistema Gestion Vacantes
