Fix proxy headers

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -50,3 +50,19 @@ sendgrid.api.key=${SENDGRID_API_KEY}
 # Si no tienes definida la variable APP_MAIL_FROM en Railway, usa tu correo directo aquí abajo:
 app.mail.from=${APP_MAIL_FROM:allex124mtz@gmail.com}
 app.mail.from-name=Sistema Gestion Vacantes
+
+
+# ==========================================
+# CONFIGURACIÓN PARA PROXY (RAILWAY/NUBE)
+# ==========================================
+# Permite que Spring Boot reconozca que la petición original venía por HTTPS
+server.forward-headers-strategy=native
+
+# Configuración específica de Tomcat para leer los headers de Railway
+server.tomcat.remote-ip-header=x-forwarded-for
+server.tomcat.protocol-header=x-forwarded-proto
+server.tomcat.internal-proxies=.*
+
+# Asegura que las cookies de sesión funcionen en HTTPS
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.same-site=lax
